// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edge should render if selected 1`] = `
.emotion-0 {
  fill: none;
  stroke: #657fcc;
  stroke-width: 2px;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.emotion-2 {
  fill: #657fcc;
}

<g>
  <path
    class="emotion-0 emotion-1"
    d="M80,100L80,104.16666666666667C80,108.33333333333333,80,116.66666666666667,80,125C80,133.33333333333334,80,141.66666666666666,80,145.83333333333334L80,150"
  />
  <polygon
    class="emotion-2 emotion-3"
    height="8"
    points="1,1 -2.5,-7 4.5,-7"
    transform="rotate(-45 1 1)"
    width="7"
    x="1"
    y="1"
  />
</g>
`;

exports[`Edge should render inside scope 1`] = `
.emotion-0 {
  fill: none;
  stroke: #999;
  stroke-width: 2px;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.emotion-2 {
  fill: #999;
}

<g>
  <path
    class="emotion-0 emotion-1"
    d="M80,100L80,104.16666666666667C80,108.33333333333333,80,116.66666666666667,80,125C80,133.33333333333334,80,141.66666666666666,80,145.83333333333334L80,150"
  />
  <polygon
    class="emotion-2 emotion-3"
    height="8"
    points="1,1 -2.5,-7 4.5,-7"
    transform="rotate(-45 1 1)"
    width="7"
    x="1"
    y="1"
  />
</g>
`;

exports[`Edge should render outside scope 1`] = `
.emotion-0 {
  fill: none;
  stroke: #999;
  stroke-width: 2px;
  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.emotion-2 {
  fill: #999;
}

<g>
  <path
    class="emotion-0 emotion-1"
    d="M80,100L80,104.16666666666667C80,108.33333333333333,80,116.66666666666667,80,125C80,133.33333333333334,80,141.66666666666666,80,145.83333333333334L80,150"
    stroke-dasharray="3, 3"
  />
  <polygon
    class="emotion-2 emotion-3"
    height="8"
    points="1,1 -2.5,-7 4.5,-7"
    transform="rotate(-45 1 1)"
    width="7"
    x="1"
    y="1"
  />
</g>
`;
